--- a/html/hanabi/不怎么好看的烟花.html
+++ b/html/hanabi/不怎么好看的烟花.html
@@ -251,7 +251,7 @@
 				var text = ele.innerHTML;
 				context.save();
 				var fontSize =200;
-				context.font = fontSize+"px ËÎÌå bold";
+				context.font = fontSize+"px SimHei bold";
 				context.textAlign = "center";
 				context.textBaseline = "middle";
 				context.fillStyle = "rgba("+parseInt(getRandom(128,255))+","+parseInt(getRandom(128,255))+","+parseInt(getRandom(128,255))+" , 1)";
