--- a/html/hanabi/不怎么好看的烟花.html
+++ b/html/hanabi/不怎么好看的烟花.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTcityD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<meta charset="utf-8">
@@ -251,7 +251,7 @@
 				var text = ele.innerHTML;
 				context.save();
 				var fontSize =200;
-				context.font = fontSize+"px SimHei bold";
+				context.font = fontSize+"px ËÎÌå bold";
 				context.textAlign = "center";
 				context.textBaseline = "middle";
 				context.fillStyle = "rgba("+parseInt(getRandom(128,255))+","+parseInt(getRandom(128,255))+","+parseInt(getRandom(128,255))+" , 1)";
