--- a/html/hanabi/不怎么好看的烟花.html
+++ b/html/hanabi/不怎么好看的烟花.html
@@ -10,7 +10,7 @@
 	</style>
 	<title>不怎么好看的烟花</title>
 </head>
-<body style="background: url('img/nightlife.png'); background-size: 100% 100%; background-attachment: fixed;">
+<body style="background: url('img/Nightlife.png'); background-size: 100% 100%; background-attachment: fixed;">
 
 <div style="width: 100%; height:100%; overflow:hidden;">
 
