--- a/html/music/不怎么好听的音乐.html
+++ b/html/music/不怎么好听的音乐.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <canvas></canvas>
-    <audio src="music/交汇的时光.wav" controls></audio>
+    <audio src="music/交汇的晴空.mp3" controls></audio>
 </body>
 </html>
 
